@@ -1354,6 +1354,19 @@ name|solr
 operator|.
 name|update
 operator|.
+name|IndexFingerprint
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|update
+operator|.
 name|SolrIndexConfig
 import|;
 end_import
@@ -1718,6 +1731,22 @@ DECL|field|releaseDirectory
 specifier|private
 name|boolean
 name|releaseDirectory
+decl_stmt|;
+DECL|field|fingerprint
+specifier|private
+specifier|volatile
+name|IndexFingerprint
+name|fingerprint
+decl_stmt|;
+DECL|field|fingerprintLock
+specifier|private
+specifier|final
+name|Object
+name|fingerprintLock
+init|=
+operator|new
+name|Object
+argument_list|()
 decl_stmt|;
 DECL|method|getReader
 specifier|private
@@ -12553,6 +12582,48 @@ argument_list|)
 argument_list|,
 name|doc
 argument_list|)
+return|;
+block|}
+comment|/** @lucene.internal    * gets a cached version of the IndexFingerprint for this searcher    **/
+DECL|method|getIndexFingerprint
+specifier|public
+name|IndexFingerprint
+name|getIndexFingerprint
+parameter_list|(
+name|long
+name|maxVersion
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+comment|// possibly expensive, so prevent more than one thread from calculating it for this searcher
+synchronized|synchronized
+init|(
+name|fingerprintLock
+init|)
+block|{
+if|if
+condition|(
+name|fingerprint
+operator|==
+literal|null
+condition|)
+block|{
+name|fingerprint
+operator|=
+name|IndexFingerprint
+operator|.
+name|getFingerprint
+argument_list|(
+name|this
+argument_list|,
+name|maxVersion
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+return|return
+name|fingerprint
 return|;
 block|}
 comment|/////////////////////////////////////////////////////////////////////
